--- a/mars_craters_starting_kit.ipynb
+++ b/mars_craters_starting_kit.ipynb
@@ -1072,11 +1072,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[38;5;178m\u001b[1mTesting Mars craters detection and classification\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1mReading train and test files from ./data ...\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1mReading cv ...\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1mTraining ./submissions/starting_kit ...\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1mCV fold 0\u001b[0m\n",
+      "\t\u001b[38;5;178m\u001b[1mscore   ospa    scp   ap  prec(0)  prec(0.5)  prec(0.9)  rec(0)  rec(0.5)  rec(0.9)  madc  madr\u001b[0m\n",
+      "\t\u001b[38;5;10m\u001b[1mtrain\u001b[0m  \u001b[38;5;10m\u001b[1m\u001b[38;5;150m0.997\u001b[0m\u001b[0m  \u001b[38;5;10m\u001b[1m\u001b[38;5;150m0.997\u001b[0m\u001b[0m  \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m    \u001b[38;5;150m0.400\u001b[0m        \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m        \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;150m0.545\u001b[0m       \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m       \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;150m\u001b[38;5;150mNaN\u001b[0m\u001b[0m   \u001b[38;5;150m\u001b[38;5;150mNaN\u001b[0m\u001b[0m\n",
+      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m0.995\u001b[0m  \u001b[38;5;105m0.992\u001b[0m  \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m    \u001b[38;5;105m\u001b[38;5;105m0.500\u001b[0m\u001b[0m        \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m        \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;105m\u001b[38;5;105m0.500\u001b[0m\u001b[0m       \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m       \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;105m\u001b[38;5;105mNaN\u001b[0m\u001b[0m   \u001b[38;5;105m\u001b[38;5;105mNaN\u001b[0m\u001b[0m\n",
+      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m0.988\u001b[0m  \u001b[38;5;218m0.995\u001b[0m  \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m    \u001b[38;5;218m0.667\u001b[0m        \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m        \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;218m1.000\u001b[0m       \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m       \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;218m\u001b[38;5;218mNaN\u001b[0m\u001b[0m   \u001b[38;5;218m\u001b[38;5;218mNaN\u001b[0m\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1mCV fold 1\u001b[0m\n",
+      "\t\u001b[38;5;178m\u001b[1mscore   ospa    scp   ap  prec(0)  prec(0.5)  prec(0.9)  rec(0)  rec(0.5)  rec(0.9)  madc  madr\u001b[0m\n",
+      "\t\u001b[38;5;10m\u001b[1mtrain\u001b[0m  \u001b[38;5;10m\u001b[1m0.997\u001b[0m  \u001b[38;5;150m0.994\u001b[0m  \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m    \u001b[38;5;150m0.400\u001b[0m        \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m        \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m     \u001b[38;5;150m0.5\u001b[0m       \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m       \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;150m\u001b[38;5;150mNaN\u001b[0m\u001b[0m   \u001b[38;5;150m\u001b[38;5;150mNaN\u001b[0m\u001b[0m\n",
+      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m0.996\u001b[0m  \u001b[38;5;105m0.997\u001b[0m  \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m    \u001b[38;5;105m0.500\u001b[0m        \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m        \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m     \u001b[38;5;105m0.6\u001b[0m       \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m       \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;105m\u001b[38;5;105mNaN\u001b[0m\u001b[0m   \u001b[38;5;105m\u001b[38;5;105mNaN\u001b[0m\u001b[0m\n",
+      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m0.988\u001b[0m  \u001b[38;5;218m0.995\u001b[0m  \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m    \u001b[38;5;218m0.667\u001b[0m        \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m        \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m     \u001b[38;5;218m1.0\u001b[0m       \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m       \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;218m\u001b[38;5;218mNaN\u001b[0m\u001b[0m   \u001b[38;5;218m\u001b[38;5;218mNaN\u001b[0m\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1mCV fold 2\u001b[0m\n",
+      "\t\u001b[38;5;178m\u001b[1mscore   ospa    scp   ap  prec(0)  prec(0.5)  prec(0.9)  rec(0)  rec(0.5)  rec(0.9)  madc  madr\u001b[0m\n",
+      "\t\u001b[38;5;10m\u001b[1mtrain\u001b[0m  \u001b[38;5;10m\u001b[1m0.996\u001b[0m  \u001b[38;5;150m0.994\u001b[0m  \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m    \u001b[38;5;150m0.500\u001b[0m        \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m        \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;150m0.538\u001b[0m       \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m       \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;150m\u001b[38;5;150mNaN\u001b[0m\u001b[0m   \u001b[38;5;150m\u001b[38;5;150mNaN\u001b[0m\u001b[0m\n",
+      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m0.998\u001b[0m  \u001b[38;5;105m0.997\u001b[0m  \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m    \u001b[38;5;105m0.300\u001b[0m        \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m        \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;105m0.500\u001b[0m       \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m       \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;105m\u001b[38;5;105mNaN\u001b[0m\u001b[0m   \u001b[38;5;105m\u001b[38;5;105mNaN\u001b[0m\u001b[0m\n",
+      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m0.988\u001b[0m  \u001b[38;5;218m0.995\u001b[0m  \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m    \u001b[38;5;218m0.667\u001b[0m        \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m        \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;218m1.000\u001b[0m       \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m       \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m   \u001b[38;5;218m\u001b[38;5;218mNaN\u001b[0m\u001b[0m   \u001b[38;5;218m\u001b[38;5;218mNaN\u001b[0m\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1m----------------------------\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1mMean CV scores\u001b[0m\n",
+      "(3, 11)\n",
+      "[[ 0.                 nan         nan  0.98787577  0.66666667  0.          0.\n",
+      "   1.          0.          0.          0.99475597]\n",
+      " [ 0.                 nan         nan  0.99642742  0.43333333  0.          0.\n",
+      "   0.52797203  0.          0.          0.99496831]\n",
+      " [ 0.                 nan         nan  0.99644172  0.43333333  0.          0.\n",
+      "   0.53333333  0.          0.          0.99514695]]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/kegl/anaconda/bin/ramp_test_submission\", line 11, in <module>\n",
+      "    load_entry_point('ramp-workflow==0.1.dev0', 'console_scripts', 'ramp_test_submission')()\n",
+      "  File \"/Users/kegl/anaconda/lib/python2.7/site-packages/ramp_workflow-0.1.dev0-py2.7.egg/rampwf/utils/command_line.py\", line 85, in ramp_test_submission\n",
+      "    retrain=retrain)\n",
+      "  File \"/Users/kegl/anaconda/lib/python2.7/site-packages/ramp_workflow-0.1.dev0-py2.7.egg/rampwf/utils/testing.py\", line 370, in assert_submission\n",
+      "    df_mean_scores = _round_df_scores(df_mean_scores, score_types)\n",
+      "  File \"/Users/kegl/anaconda/lib/python2.7/site-packages/ramp_workflow-0.1.dev0-py2.7.egg/rampwf/utils/testing.py\", line 186, in _round_df_scores\n",
+      "    df_scores_copy = df_scores.copy()\n",
+      "AttributeError: 'NoneType' object has no attribute 'copy'\n"
+     ]
+    }
+   ],
    "source": [
     "!ramp_test_submission --quick-test"
    ]
@@ -1144,21 +1187,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   },
   "nav_menu": {},
   "toc": {
